Fix menu z-index.

--- a/common/src/main/webapp/less/style.less
+++ b/common/src/main/webapp/less/style.less
@@ -1893,7 +1893,7 @@ html {
 .explore-select-columns {
   .menu {
     max-height: 30em !important;
-    z-index: 3000;
+    z-index: 3000 !important;
 
     .item {
       font-size: small !important;
